--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".SettingsActivity"
             android:label="@string/settings">
@@ -25,6 +26,9 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.reddyz.newz.MainActivity"/>
         </activity>
+
+        <activity android:name=".NewsDetailActivity"/>
+
     </application>
 
 </manifest>
